--- a/master/docker-compose.yml
+++ b/master/docker-compose.yml
@@ -2,7 +2,7 @@
 services:
   web:
     build: .
-    command: gunicorn master.wsgi:application --bind 0.0.0.0:8000
+    command: gunicorn master.wsgi:application --bind 0.0.0.0:8000 --reload
     volumes:
       - .:/app
     ports:
