--- a/master/requirements.txt
+++ b/master/requirements.txt
@@ -5,4 +5,5 @@ gunicorn>=20.0.4
 psycopg2-binary>=2.9
 dj-database-url>=1.2.0
 django-oauth-toolkit>=1.10.0
+djangorestframework>=3.14.0
 whitenoise>=6.0
