--- a/tenant/docker-compose.yml
+++ b/tenant/docker-compose.yml
@@ -1,6 +1,6 @@
 
 services:
-  web:
+  tenant-web:
     build: .
     volumes:
       - .:/app
@@ -10,6 +10,8 @@ services:
       - .env
     depends_on:
       - db
+    networks:
+      - common-network
 
   db:
     image: postgres:13
@@ -22,6 +24,12 @@ services:
       - "5435:5435"
     volumes:
       - db_tenant:/var/lib/postgresql/data
+    networks:
+      - common-network
 
 volumes:
   db_tenant:
+
+networks:
+  common-network:
+    external: true
