Génération partiel des secret key de djanso dans tenant et dans master

--- a/master/.env
+++ b/master/.env
@@ -1,5 +1,5 @@
 DEBUG=0
-SECRET_KEY=une_clé_très_secrète
+DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 # Configuration de la base de données
@@ -12,3 +12,4 @@ DJANGO_SUPERUSER_PASSWORD=adminpassword
 # Variables pour le wait-for-db
 DB_HOST=db
 DB_PORT=5432
+DJANGO_SECRET_KEY==wtluhg5wxsvi4rewg55uvx-2he@r_jg+523pahc0khs+ox95g
