--- a/tenant/.env
+++ b/tenant/.env
@@ -1,5 +1,5 @@
 DEBUG=0
-SECRET_KEY=une_clé_très_secrète
+DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 # Configuration de la base de données
