(+) add server deployment

--- a/master/docker-compose.yml
+++ b/master/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     volumes:
       - .:/app
+      - ../tenant/:/app/tenant/
+      - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8000:8000"
     env_file:
