--- a/master/requirements.txt
+++ b/master/requirements.txt
@@ -1,9 +1,23 @@
-Django>=4.2,<5.0
-django-oauth-toolkit>=1.10.0
-python-dotenv>=1.0.0
-gunicorn>=20.0.4
-psycopg2-binary>=2.9
-dj-database-url>=1.2.0
-django-oauth-toolkit>=1.10.0
-djangorestframework>=3.14.0
-whitenoise>=6.0
+asgiref==3.8.1
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+cryptography==44.0.2
+dj-database-url==2.3.0
+Django==4.2.20
+django-oauth-toolkit==3.0.1
+djangorestframework==3.16.0
+docker==7.1.0
+gunicorn==23.0.0
+idna==3.10
+jwcrypto==1.5.6
+oauthlib==3.2.2
+packaging==24.2
+psycopg2-binary==2.9.10
+pycparser==2.22
+python-dotenv==1.1.0
+requests==2.32.3
+sqlparse==0.5.3
+typing_extensions==4.13.1
+urllib3==2.3.0
+whitenoise==6.9.0
