--- a/tenant/.env
+++ b/tenant/.env
@@ -1,5 +1,4 @@
 DEBUG=0
-DJANGO_SECRET_KEY=
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 # Configuration de la base de données
@@ -12,4 +11,4 @@ DJANGO_SUPERUSER_PASSWORD=adminpassword
 
 # Variables pour le wait-for-db
 DB_HOST=db
-DB_PORT=5435
+DB_PORT=5435DJANGO_SECRET_KEY=3y-3ot-q)oj^uuf*wve!$d2l$$ryfn6a7yb&ug8!xq8bt2-i^c
