(+) protect tenant servers with 'creator' system

--- a/master/.env
+++ b/master/.env
@@ -5,7 +5,7 @@ DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 DATABASE_URL=postgres://youruser:yourpassword@db:5432/master_db
 
 # Variables pour la création du superuser
-DJANGO_SUPERUSER_EMAIL=gui.coquemont@gmail.com
+DJANGO_SUPERUSER_EMAIL=martin.bellot.off@gmail.com
 DJANGO_SUPERUSER_PASSWORD=adminpassword
 
 # Variables pour le wait-for-db
