--- a/master/requirements.txt
+++ b/master/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==2.3.0
 Django==4.2.20
 django-oauth-toolkit==3.0.1
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 docker==7.1.0
 gunicorn==23.0.0
 idna==3.10
@@ -15,6 +16,7 @@ oauthlib==3.2.2
 packaging==24.2
 psycopg2-binary==2.9.10
 pycparser==2.22
+PyJWT==2.9.0
 python-dotenv==1.1.0
 requests==2.32.3
 sqlparse==0.5.3
